# sbf-net

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_AGENTS.md  LICENSE  MEMORY_RULES.md  README.md  START_HERE.md  install.md  requirements.txt  train.md
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.codex/: config.toml  gsd-file-manifest.json
.codex/agents/: README.md  architect.toml  gsd-debugger.md  gsd-debugger.toml  gsd-executor.md  gsd-executor.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-project-researcher.md  gsd-project-researcher.toml  (+10 more)
.planning/: PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
claude/: architect.md  worker.md
data_pre/bf_edge_v3/cpp/: CMakeLists.txt  setup.py
data_pre/bf_edge_v3/cpp/include/bf_edge/: common.h  kdtree.h  stage1.h  stage2.h  stage3.h  stage4.h
data_pre/bf_edge_v3/cpp/src/: bindings.cpp  common.cpp  stage1.cpp  stage2.cpp  stage3.cpp  stage4.cpp
docs/: NET-ISSUES.md  agents.md  data_format.md  install.md  pointcept_boundary.md  project_structure.md  research_plan.md  research_plan_semantic_boundary_field.md  train.md  validation_design.md  workflow.md
handoff/: chat_entry.md  handoff_for_chat.md  latest_round.md  web_to_agent_contract.md
project/: __init__.py
project_memory/: 00_project_overview.md  01_current_architecture.md  02_loss_design.md  03_data_pipeline.md  04_training_rules.md  05_active_stage.md  06_task_queue.md  07_pointcept_interface.md  90_archived_decisions.md  README.md  current_state.md
(+713 files in other folders)
